Fixed filter visibility issue

--- a/src/app/sidebar-popup/sidebar-popup.component.scss
+++ b/src/app/sidebar-popup/sidebar-popup.component.scss
@@ -13,7 +13,7 @@ jw-modal {
         left: 0;
 
         /* z-index must be higher than .jw-modal-background */
-        z-index: 1000;
+        z-index: 1100;
         
         /* enables scrolling for tall modals */
         overflow: auto;
@@ -43,7 +43,7 @@ jw-modal {
         opacity: 0.75;
         
         /* z-index must be below .jw-modal and above everything else  */
-        z-index: 900;
+        z-index: 1099;
     }
 }
 
